crates/alder-parse/src/expression/snapshots/alder_parse__expression__let___tests__let_destructure.snap
---
source: crates/alder-parse/src/expression/let_.rs
description: "Code (indented inside a def):\n\n    let\n        (a, b) = pair\n    in\n        a\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 5,
            column: 1,
        },
    },
    value: Let {
        defs: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 5,
                    },
                },
                value: Destruct {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 15,
                            },
                        },
                        value: Tuple {
                            first: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 11,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                            second: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 14,
                                    },
                                },
                                value: Var(
                                    "b",
                                ),
                            },
                            rest: [],
                        },
                    },
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 18,
                            },
                            end: Position {
                                line: 2,
                                column: 22,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "pair",
                        },
                    },
                },
            },
        ],
        body: Located {
            region: Region {
                start: Position {
                    line: 4,
                    column: 9,
                },
                end: Position {
                    line: 4,
                    column: 10,
                },
            },
            value: Var {
                kind: LowVar,
                name: "a",
            },
        },
    },
}
