crates/alder-parse/src/expression/snapshots/alder_parse__expression__let___tests__let_multiple_defs.snap
---
source: crates/alder-parse/src/expression/let_.rs
description: "Code (indented inside a def):\n\n    let\n        x = 1\n        y = 2\n    in\n        x\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 6,
            column: 1,
        },
    },
    value: Let {
        defs: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 9,
                    },
                },
                value: Define {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: "x",
                    },
                    args: [],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 13,
                            },
                            end: Position {
                                line: 2,
                                column: 14,
                            },
                        },
                        value: Int(
                            1,
                        ),
                    },
                    annotation: None,
                },
            },
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 9,
                    },
                    end: Position {
                        line: 4,
                        column: 5,
                    },
                },
                value: Define {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 9,
                            },
                            end: Position {
                                line: 3,
                                column: 10,
                            },
                        },
                        value: "y",
                    },
                    args: [],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 13,
                            },
                            end: Position {
                                line: 3,
                                column: 14,
                            },
                        },
                        value: Int(
                            2,
                        ),
                    },
                    annotation: None,
                },
            },
        ],
        body: Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 9,
                },
                end: Position {
                    line: 5,
                    column: 10,
                },
            },
            value: Var {
                kind: LowVar,
                name: "x",
            },
        },
    },
}
