crates/alder-parse/src/expression/snapshots/alder_parse__expression__let___tests__let_nested.snap
---
source: crates/alder-parse/src/expression/let_.rs
description: "Code (indented inside a def):\n\n    let\n        x =\n            let\n                y = 1\n            in\n                y\n    in\n        x\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 9,
            column: 1,
        },
    },
    value: Let {
        defs: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 7,
                        column: 5,
                    },
                },
                value: Define {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: "x",
                    },
                    args: [],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 13,
                            },
                            end: Position {
                                line: 7,
                                column: 5,
                            },
                        },
                        value: Let {
                            defs: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 4,
                                            column: 17,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 13,
                                        },
                                    },
                                    value: Define {
                                        name: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 4,
                                                    column: 17,
                                                },
                                                end: Position {
                                                    line: 4,
                                                    column: 18,
                                                },
                                            },
                                            value: "y",
                                        },
                                        args: [],
                                        body: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 4,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 4,
                                                    column: 22,
                                                },
                                            },
                                            value: Int(
                                                1,
                                            ),
                                        },
                                        annotation: None,
                                    },
                                },
                            ],
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 6,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 6,
                                        column: 18,
                                    },
                                },
                                value: Var {
                                    kind: LowVar,
                                    name: "y",
                                },
                            },
                        },
                    },
                    annotation: None,
                },
            },
        ],
        body: Located {
            region: Region {
                start: Position {
                    line: 8,
                    column: 9,
                },
                end: Position {
                    line: 8,
                    column: 10,
                },
            },
            value: Var {
                kind: LowVar,
                name: "x",
            },
        },
    },
}
