crates/alder-parse/src/expression/snapshots/alder_parse__expression__let___tests__let_with_type_annotation.snap
---
source: crates/alder-parse/src/expression/let_.rs
description: "Code (indented inside a def):\n\n    let\n        f : Int -> Int\n        f x = x\n    in\n        f 1\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 6,
            column: 1,
        },
    },
    value: Let {
        defs: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 4,
                        column: 5,
                    },
                },
                value: Define {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 9,
                            },
                            end: Position {
                                line: 3,
                                column: 10,
                            },
                        },
                        value: "f",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 11,
                                },
                                end: Position {
                                    line: 3,
                                    column: 12,
                                },
                            },
                            value: Var(
                                "x",
                            ),
                        },
                    ],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 15,
                            },
                            end: Position {
                                line: 3,
                                column: 16,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "x",
                        },
                    },
                    annotation: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 13,
                                },
                                end: Position {
                                    line: 2,
                                    column: 23,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 16,
                                        },
                                    },
                                    value: Type {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 16,
                                            },
                                        },
                                        name: "Int",
                                        args: [],
                                    },
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 20,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 23,
                                        },
                                    },
                                    value: Type {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 20,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 23,
                                            },
                                        },
                                        name: "Int",
                                        args: [],
                                    },
                                },
                            },
                        },
                    ),
                },
            },
        ],
        body: Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 9,
                },
                end: Position {
                    line: 5,
                    column: 12,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 9,
                        },
                        end: Position {
                            line: 5,
                            column: 10,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "f",
                    },
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 11,
                            },
                            end: Position {
                                line: 5,
                                column: 12,
                            },
                        },
                        value: Int(
                            1,
                        ),
                    },
                ],
            },
        },
    },
}
